# Individual_Assignment

./: README.md  app.py  pyproject.toml  requirements.txt
src/bikes/: __init__.py  model.py
test/: test_bikes.py
